--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "stack-queue-typescript-simplified",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple of stack and queue in ts",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/GamerQuanTuM/stack-queue#readme",
   "devDependencies": {
+    "ts-node": "^10.9.2",
+    "tsup": "^8.1.0",
     "typescript": "^5.4.5"
   }
 }
